@@ -1,5 +1,6 @@
 
 version XXXX - XXXX
+ . Using own scheduler to schedule timers/etc... pause/resume works as expected
  . Director: if in landscape mode, tells the application to be in landscape mode too
  . Label: supports changing it's string
  . performance: Actions are not cloned. If you want to reuse them, clone them manually using the method 'copy'
